--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </head>
 <body>
     <canvas id="game"></canvas>
-    <script type="module" src="dist/dist.js"></script>
+    <script type="module" src="dist.js"></script>
 </body>
 </html>
